# opendegiro

./: main.py  pyproject.toml
opendeclaro/degiro/: dataprep.py  dataset.py
