[project]
name = "opendeclaro-polars"
version = "0.1.0"
description = "Open source package to compute tax gains from degiro"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "polars>=1.18.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "commitizen>=4.1.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "jupyter-black>=0.4.0",
    "jupyter-lsp>=2.2.5",
    "jupyterlab>=4.3.4",
    "pre-commit>=4.0.1",
]
